# enterprise_ai_assistant

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md  render.yaml
backend/: .dockerignore  Dockerfile  mlflow.db  pyproject.toml  recreate_collection.py  test_agent.py  test_embeddings.py  test_hybrid.py  test_langsmith.py  test_langsmith_connection.py  test_mlflow.py  test_neon.py  test_pipeline.py  test_processor.py  test_qdrant.py  test_qdrant_cloud.py  test_redis.py  test_redis_cloud.py  test_reranker.py  test_retrieval.py  test_search.py  test_search_cache.py  test_semantic_cache.py  test_sparse.py  test_store_cache.py  test_trace.py  test_trace_explicit.py
backend/alembic/: env.py
backend/alembic/versions/: 3e177cf75c07_initial_tables.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: chat.py  documents.py
backend/app/services/: agent.py  cache.py  chat_history.py  document_processor.py  embeddings.py  retrieval.py  semantic_cache.py  vector_store.py
backend/uploads/: agency.csv
frontend/: Dockerfile  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: sidebar.tsx  theme-toggle.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/lib/: auth.ts
