[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ahmad Tanveer <codxahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.139.0,<0.140.0"
uvicorn = ">=0.50.2,<0.51.0"
pydantic-settings = ">=2.14.2,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
sqlalchemy = ">=2.0.51,<3.0.0"
psycopg2-binary = ">=2.9.12,<3.0.0"
alembic = ">=1.18.5,<2.0.0"
qdrant-client = ">=1.18.0,<2.0.0"
redis = ">=8.0.1,<9.0.0"
python-multipart = ">=0.0.32,<0.0.33"
langchain = ">=1.3.12,<2.0.0"
langchain-community = ">=0.4.2,<0.5.0"
pypdf = ">=6.14.2,<7.0.0"
docx2txt = ">=0.9,<0.10"
sentence-transformers = ">=5.6.0,<6.0.0"
google-genai = ">=2.11.0,<3.0.0"
fastembed = ">=0.8.0,<0.9.0"
langgraph = ">=1.2.9,<2.0.0"
langsmith = ">=0.10.5,<0.11.0"
datasets = ">=5.0.0,<6.0.0"
langchain-google-vertexai = ">=3.2.4,<4.0.0"
mlflow = ">=3.14.0,<4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
